--- a/project_timesheet_time_control/views/project_project_view.xml
+++ b/project_timesheet_time_control/views/project_project_view.xml
@@ -16,7 +16,7 @@
                     string="Start work"
                     type="object"
                     icon="fa-play-circle text-success"
-                    attrs="{'invisible': [('show_time_control', '!=', 'start')]}"
+                    invisible="show_time_control != 'start'"
                     class="oe_stat_button"
                     title="Start work"
                     groups="hr_timesheet.group_hr_timesheet_user"
@@ -26,7 +26,7 @@
                     string="Stop work"
                     type="object"
                     icon="fa-stop-circle text-warning"
-                    attrs="{'invisible': [('show_time_control', '!=', 'stop')]}"
+                    invisible="show_time_control != 'stop'"
                     class="oe_stat_button"
                     title="End work"
                     groups="hr_timesheet.group_hr_timesheet_user"
@@ -49,7 +49,7 @@
                     name="button_start_work"
                     tabindex="-1"
                     type="object"
-                    attrs="{'invisible': [('show_time_control', '!=', 'start')]}"
+                    invisible="show_time_control != 'start'"
                     class="o_project_kanban_box"
                     groups="hr_timesheet.group_hr_timesheet_user"
                 >
@@ -64,7 +64,7 @@
                     name="button_end_work"
                     tabindex="-1"
                     type="object"
-                    attrs="{'invisible': [('show_time_control', '!=', 'stop')]}"
+                    invisible="show_time_control != 'stop'"
                     class="o_project_kanban_box"
                     groups="hr_timesheet.group_hr_timesheet_user"
                 >
@@ -95,7 +95,7 @@
                     tabindex="-1"
                     type="object"
                     icon="fa-play-circle text-success"
-                    attrs="{'invisible': [('show_time_control', '!=', 'start')]}"
+                    invisible="show_time_control != 'start'"
                     class="oe_stat_button"
                     title="Start work"
                     groups="hr_timesheet.group_hr_timesheet_user"
@@ -106,7 +106,7 @@
                     tabindex="-1"
                     type="object"
                     icon="fa-stop-circle text-warning"
-                    attrs="{'invisible': [('show_time_control', '!=', 'stop')]}"
+                    invisible="show_time_control != 'stop'"
                     class="oe_stat_button"
                     title="End work"
                     groups="hr_timesheet.group_hr_timesheet_user"
