--- a/project_timesheet_time_control/views/project_task_view.xml
+++ b/project_timesheet_time_control/views/project_task_view.xml
@@ -17,7 +17,7 @@
                     string="Start work"
                     type="object"
                     icon="fa-play-circle text-success"
-                    attrs="{'invisible': [('show_time_control', '!=', 'start')]}"
+                    invisible="show_time_control != 'start'"
                     class="oe_stat_button"
                     title="Start work"
                     groups="hr_timesheet.group_hr_timesheet_user"
@@ -27,7 +27,7 @@
                     string="Stop work"
                     type="object"
                     icon="fa-stop-circle text-warning"
-                    attrs="{'invisible': [('show_time_control', '!=', 'stop')]}"
+                    invisible="show_time_control != 'stop'"
                     class="oe_stat_button"
                     title="End work"
                     groups="hr_timesheet.group_hr_timesheet_user"
@@ -54,7 +54,7 @@
                     tabindex="-1"
                     type="object"
                     icon="fa-play-circle text-success"
-                    attrs="{'invisible': [('show_time_control', '!=', 'resume')]}"
+                    invisible="show_time_control != 'resume'"
                     class="oe_stat_button"
                     groups="hr_timesheet.group_hr_timesheet_user"
                 />
@@ -64,7 +64,7 @@
                     tabindex="-1"
                     type="object"
                     icon="fa-stop-circle text-warning"
-                    attrs="{'invisible': [('show_time_control', '!=', 'stop')]}"
+                    invisible="show_time_control != 'stop'"
                     class="oe_stat_button"
                     groups="hr_timesheet.group_hr_timesheet_user"
                 />
@@ -99,7 +99,7 @@
                     tabindex="-1"
                     type="object"
                     string="Resume work"
-                    attrs="{'invisible': [('show_time_control', '!=', 'resume')]}"
+                    invisible="show_time_control != 'resume'"
                     class="o_kanban_inline_block fa fa-lg fa-play-circle text-success"
                     title="Resume work"
                     groups="hr_timesheet.group_hr_timesheet_user"
@@ -109,7 +109,7 @@
                     tabindex="-1"
                     type="object"
                     string="Stop work"
-                    attrs="{'invisible': [('show_time_control', '!=', 'stop')]}"
+                    invisible="show_time_control != 'stop'"
                     class="o_kanban_inline_block fa fa-lg fa-stop-circle text-warning"
                     title="Stop work"
                     groups="hr_timesheet.group_hr_timesheet_user"
@@ -140,7 +140,7 @@
                         tabindex="-1"
                         type="object"
                         icon="fa-play-circle text-success"
-                        attrs="{'invisible': [('show_time_control', '!=', 'resume')]}"
+                        invisible="show_time_control != 'resume'"
                         class="oe_stat_button"
                         context="{'show_created_timer': True}"
                         title="Resume work"
@@ -151,7 +151,7 @@
                         tabindex="-1"
                         type="object"
                         icon="fa-stop-circle text-warning"
-                        attrs="{'invisible': [('show_time_control', '!=', 'stop')]}"
+                        invisible="show_time_control != 'stop'"
                         class="oe_stat_button"
                         title="Stop work"
                         groups="hr_timesheet.group_hr_timesheet_user"
@@ -173,7 +173,7 @@
                 />
                 <a
                     name="button_start_work"
-                    attrs="{'invisible': [('show_time_control', '!=', 'start')]}"
+                    invisible="show_time_control != 'start'"
                     class="o_kanban_inline_block fa fa-lg fa-play-circle text-success"
                     tabindex="-1"
                     type="object"
@@ -182,7 +182,7 @@
                 />
                 <a
                     name="button_end_work"
-                    attrs="{'invisible': [('show_time_control', '!=', 'stop')]}"
+                    invisible="show_time_control != 'stop'"
                     class="o_kanban_inline_block fa fa-lg fa-stop-circle text-warning"
                     tabindex="-1"
                     type="object"
@@ -209,7 +209,7 @@
                     tabindex="-1"
                     type="object"
                     icon="fa-play-circle text-success"
-                    attrs="{'invisible': [('show_time_control', '!=', 'start')]}"
+                    invisible="show_time_control != 'start'"
                     class="oe_stat_button"
                     title="Start work"
                     groups="hr_timesheet.group_hr_timesheet_user"
@@ -220,7 +220,7 @@
                     tabindex="-1"
                     type="object"
                     icon="fa-stop-circle text-warning"
-                    attrs="{'invisible': [('show_time_control', '!=', 'stop')]}"
+                    invisible="show_time_control != 'stop'"
                     class="oe_stat_button"
                     title="End work"
                     groups="hr_timesheet.group_hr_timesheet_user"
