--- a/project_role/views/res_config_settings.xml
+++ b/project_role/views/res_config_settings.xml
@@ -14,8 +14,7 @@
                     <h2>Roles &amp; Assignments</h2>
                     <div class="row mt16 o_settings_container">
                         <div class="col-12 col-lg-6 o_setting_box">
-                            <div class="o_setting_left_pane">
-                            </div>
+                            <div class="o_setting_left_pane" />
                             <div class="o_setting_right_pane">
                                 <span class="o_form_label">Project Roles</span>
                                 <span
