--- a/project_role/views/project_assignment.xml
+++ b/project_role/views/project_assignment.xml
@@ -35,10 +35,7 @@
                     </group>
                     <notebook />
                 </sheet>
-                <div class="oe_chatter">
-                    <field name="message_follower_ids" widget="mail_followers" />
-                    <field name="message_ids" widget="mail_thread" />
-                </div>
+                <chatter />
             </form>
         </field>
     </record>
@@ -46,7 +43,7 @@
         <field name="name">project.assignment.tree</field>
         <field name="model">project.assignment</field>
         <field name="arch" type="xml">
-            <tree editable="top">
+            <list editable="top">
                 <field name="company_id" groups="base.group_multi_company" />
                 <field
                     name="project_id"
@@ -55,7 +52,7 @@
                 />
                 <field name="role_id" />
                 <field name="user_id" domain="[('active', '=', True)]" />
-            </tree>
+            </list>
         </field>
     </record>
     <record id="project_assignment_pivot" model="ir.ui.view">
@@ -80,7 +77,7 @@
                 <field name="user_id" />
                 <field name="role_id" />
                 <templates>
-                    <t t-name="kanban-box">
+                    <t t-name="card">
                         <div t-attf-class="oe_kanban_global_click">
                             <div class="row">
                                 <div class="col-2">
@@ -175,14 +172,14 @@
     <record id="project_assignment_view_all_action" model="ir.actions.act_window">
         <field name="name">Project Assignments</field>
         <field name="res_model">project.assignment</field>
-        <field name="view_mode">tree,kanban,form,pivot,graph</field>
+        <field name="view_mode">list,kanban,form,pivot,graph</field>
         <field name="search_view_id" ref="project_assignment_search" />
         <field name="context">{'search_default_groupby_project': 1}</field>
     </record>
     <record id="project_assignment_view_project_action" model="ir.actions.act_window">
         <field name="name">Assignments</field>
         <field name="res_model">project.assignment</field>
-        <field name="view_mode">kanban,tree,form,pivot,graph</field>
+        <field name="view_mode">kanban,list,form,pivot,graph</field>
         <field name="search_view_id" ref="project_assignment_search" />
         <field name="context">{'default_project_id': active_id}</field>
         <field name="domain">[('project_id','=',active_id)]</field>
