--- a/project_task_stage_mgmt/views/project.xml
+++ b/project_task_stage_mgmt/views/project.xml
@@ -5,7 +5,7 @@
         <field name="model">project.project</field>
         <field name="inherit_id" ref="project.project_project_view_form_simplified" />
         <field name="arch" type="xml">
-            <field name="name" position="after">
+            <field name="user_id" position="before">
                 <div class="oe_title">
                     <label for="type_ids" string="Task Stages" />
                     <field
@@ -26,15 +26,14 @@
             <page name="description" position="after">
                 <page name="stage" string="Task Stages">
                     <field name="type_ids" domain="[('user_id', '=', False)]">
-                        <tree editable="bottom">
+                        <list editable="bottom">
                             <field name="sequence" widget="handle" optional="show" />
                             <field name="name" />
                             <field name="fold" optional="show" />
                             <field name="mail_template_id" optional="show" />
                             <field name="rating_template_id" optional="show" />
                             <field name="auto_validation_state" optional="hide" />
-                            <field name="description" optional="hide" />
-                        </tree>
+                        </list>
                     </field>
                 </page>
             </page>
