--- a/project_type/views/project_type_views.xml
+++ b/project_type/views/project_type_views.xml
@@ -34,9 +34,9 @@
                         </page>
                         <page string="Subtypes" name="page_subtypes">
                             <field name="child_ids">
-                                <tree>
+                                <list>
                                     <field name="name" />
-                                </tree>
+                                </list>
                             </field>
                         </page>
                     </notebook>
@@ -67,7 +67,7 @@
     <record id="action_project_type" model="ir.actions.act_window">
         <field name="name">Project Types</field>
         <field name="res_model">project.type</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
     <menuitem
         name="Project Types"
