[MIG] project_timesheet_time_control: Migration to 18.0
[IMP] project_timesheet_time_control: pre-commit execution

[MIG] project_timesheet_time_control: Migration to 18.0

[MIG] project_timesheet_time_control: Migration to 18.0

[MIG] project_timesheet_time_control: Migration to 18.0

[MIG] project_timesheet_time_control: Migration to 18.0

--- a/project_timesheet_time_control/views/account_analytic_line_view.xml
+++ b/project_timesheet_time_control/views/account_analytic_line_view.xml
@@ -100,18 +100,15 @@
                 <field name="date_time" />
                 <field name="date_time_end" />
             </field>
-            <xpath
-                expr="//templates//t[@t-esc='record.date.value']"
-                position="attributes"
-            >
+            <xpath expr="//templates//field[@name='date']" position="attributes">
                 <attribute name="invisible">1</attribute>
             </xpath>
-            <xpath expr="//templates//t[@t-esc='record.date.value']" position="after">
-                <t t-esc="record.date_time.value" />
-                <t t-if="record.date_time_end.value">
+            <xpath expr="//templates//field[@name='date']" position="after">
+                <field name="date_time" />
+                <t t-if="date_time_end">
                     <br />
                     <span>to</span>
-                    <t t-esc="record.date_time_end.value" />
+                    <field name="date_time_end" />
                 </t>
             </xpath>
         </field>
