[FIX] project_timesheet_time_control: hide show_time_control In odoo 17+ tree/list view now uses column_invisible instead of invisible to hide the entire column.
TT55789

--- a/project_timesheet_time_control/views/account_analytic_line_view.xml
+++ b/project_timesheet_time_control/views/account_analytic_line_view.xml
@@ -12,7 +12,7 @@
                 <field name="date_time_end" optional="hide" />
             </field>
             <field name="unit_amount" position="after">
-                <field name="show_time_control" invisible="1" />
+                <field name="show_time_control" column_invisible="1" />
                 <button
                     name="button_resume_work"
                     tabindex="-1"
