--- a/project_timeline/views/project_project_view.xml
+++ b/project_timeline/views/project_project_view.xml
@@ -15,12 +15,12 @@
         </field>
     </record>
     <record id="project.open_view_project_all" model="ir.actions.act_window">
-        <field name="view_mode">kanban,tree,form,timeline</field>
+        <field name="view_mode">kanban,list,form,timeline</field>
     </record>
     <record
         id="project.open_view_project_all_group_stage"
         model="ir.actions.act_window"
     >
-        <field name="view_mode">kanban,tree,form,calendar,activity,timeline</field>
+        <field name="view_mode">kanban,list,form,calendar,activity,timeline</field>
     </record>
 </odoo>
