[MIG] project_stock > project_task_stock: Migration to 18.0
TT55547

--- a/project_task_stock/views/project_task_type_view.xml
+++ b/project_task_stock/views/project_task_type_view.xml
@@ -7,10 +7,7 @@
         <field name="arch" type="xml">
             <field name="fold" position="after">
                 <field name="use_stock_moves" />
-                <field
-                    name="done_stock_moves"
-                    attrs="{'invisible': [('use_stock_moves', '=', False)]}"
-                />
+                <field name="done_stock_moves" invisible="not use_stock_moves" />
             </field>
         </field>
     </record>
