--- a/project_task_stock/views/project_task_view.xml
+++ b/project_task_stock/views/project_task_view.xml
@@ -12,7 +12,7 @@
                     string="Product Moves"
                     class="oe_stat_button"
                     icon="fa-exchange"
-                    attrs="{'invisible': [('done_stock_moves', '=', False)]}"
+                    invisible="not done_stock_moves"
                     groups="stock.group_stock_user"
                 />
                 <button
@@ -20,23 +20,24 @@
                     name="action_see_move_scrap"
                     type="object"
                     icon="fa-arrows-v"
-                    attrs="{'invisible': [('scrap_count', '=', 0)]}"
+                    invisible="scrap_count==0"
                     groups="stock.group_stock_user"
                 >
                     <field name="scrap_count" widget="statinfo" string="Scraps" />
                 </button>
             </xpath>
-            <field name="project_id" position="after">
+            <field name="date_last_stage_update" position="after">
                 <field
                     name="stock_analytic_account_id"
                     groups="analytic.group_analytic_accounting"
-                    attrs="{'required': [('project_id', '=', False)], 'invisible': [('use_stock_moves', '=', False)]}"
+                    required="not project_id"
+                    invisible="not use_stock_moves"
                 />
                 <field
                     name="stock_analytic_distribution"
                     widget="analytic_distribution"
                     groups="analytic.group_analytic_accounting"
-                    attrs="{'invisible': [('use_stock_moves', '=', False)]}"
+                    invisible="not use_stock_moves"
                 />
                 <field name="stock_analytic_date" />
             </field>
@@ -46,7 +47,7 @@
                     string="Confirm materials"
                     type="object"
                     class="oe_highlight"
-                    attrs="{'invisible':[('allow_moves_action_confirm','=',False)]}"
+                    invisible="not allow_moves_action_confirm"
                     groups="stock.group_stock_user"
                 />
                 <button
@@ -54,48 +55,48 @@
                     string="Check availability materials"
                     type="object"
                     class="oe_highlight"
-                    attrs="{'invisible':[('allow_moves_action_assign','=',False)]}"
+                    invisible="not allow_moves_action_assign"
                     groups="stock.group_stock_user"
                 />
                 <button
                     name="button_scrap"
                     type="object"
                     string="Scrap"
-                    attrs="{'invisible': ['|','|',('stock_state', '=', 'done'),('done_stock_moves', '=', False),('stock_moves_is_locked','=',False)]}"
+                    invisible="stock_state=='done' or not done_stock_moves or not stock_moves_is_locked"
                     groups="stock.group_stock_user"
                 />
                 <button
                     name="button_unreserve"
                     type="object"
                     string="Unreserve"
-                    attrs="{'invisible': ['|','|','|', ('stock_state', '=', 'cancel'),('unreserve_visible', '=', False),('done_stock_moves', '=', False),('stock_moves_is_locked','=',False)]}"
+                    invisible="stock_state=='cancel' or not unreserve_visible or not done_stock_moves or not stock_moves_is_locked"
                     groups="stock.group_stock_user"
                 />
                 <button
                     name="action_cancel"
                     type="object"
                     string="Cancel Materials"
-                    attrs="{'invisible': ['|','|',('stock_state', 'in', ('draft', 'cancel')),('done_stock_moves', '=', False),('stock_moves_is_locked','=',False)]}"
+                    invisible="stock_state in ('draft', 'cancel') or not done_stock_moves or not stock_moves_is_locked"
                     groups="stock.group_stock_user"
                 />
                 <button
                     name="action_done"
                     type="object"
                     string="Transfer Materials"
-                    attrs="{'invisible': ['|','|',('stock_state', '!=', 'assigned'),('done_stock_moves', '=', False),('stock_moves_is_locked', '=', False)]}"
+                    invisible="stock_state!='assigned' or not done_stock_moves or not stock_moves_is_locked"
                     class="oe_highlight"
                     groups="stock.group_stock_user"
                 />
                 <button
                     name="action_toggle_stock_moves_is_locked"
-                    attrs="{'invisible': ['|', '|', ('stock_state', 'in', ('draft','cancel')), ('stock_moves_is_locked', '=', False),('done_stock_moves', '=',False)]}"
+                    invisible="stock_state in ('draft','cancel') or not stock_moves_is_locked or not done_stock_moves"
                     string="Unlock"
                     groups="stock.group_stock_manager"
                     type="object"
                 />
                 <button
                     name="action_toggle_stock_moves_is_locked"
-                    attrs="{'invisible': ['|',('stock_moves_is_locked', '=', True),('done_stock_moves','=',False)]}"
+                    invisible="stock_moves_is_locked or not done_stock_moves"
                     string="Lock"
                     class="oe_highlight"
                     groups="stock.group_stock_manager"
@@ -108,7 +109,7 @@
                 <page
                     name="stock_info"
                     string="Stock Info"
-                    attrs="{'invisible': [('use_stock_moves', '=', False)]}"
+                    invisible="not use_stock_moves"
                     groups="stock.group_stock_user"
                 >
                     <field name="done_stock_moves" invisible="1" />
@@ -119,17 +120,17 @@
                     <field name="unreserve_visible" invisible="1" />
                     <field
                         name="move_ids"
-                        context="{'tree_view_ref': 'project_stock.view_stock_move_raw_tree', 'form_view_ref':'stock.view_move_form', 'default_company_id': company_id, 'default_state': 'draft', 'default_raw_material_task_id': id}"
-                        attrs="{'readonly': [('done_stock_moves', '=', True),('stock_moves_is_locked', '=', True)]}"
+                        context="{'list_view_ref': 'project_task_stock.view_stock_move_raw_list', 'form_view_ref':'stock.view_move_form', 'default_raw_material_task_id': id}"
+                        readonly="done_stock_moves and stock_moves_is_locked"
                     />
                 </page>
             </xpath>
             <xpath expr="///page[@name='extra_info']/group[1]" position="inside">
                 <group
                     string="Stock Info"
-                    name="stock_ifno_misc"
+                    name="stock_info_misc"
                     groups="stock.group_stock_user"
-                    attrs="{'invisible': [('use_stock_moves', '=', False)]}"
+                    invisible="not use_stock_moves"
                 >
                     <field name="picking_type_id" />
                     <field name="location_id" />
