--- a/project_task_stock/views/stock_move_view.xml
+++ b/project_task_stock/views/stock_move_view.xml
@@ -4,31 +4,26 @@
         <field name="name">Inventory Moves</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">stock.move.line</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field
             name="domain"
         >['|', ('move_id.raw_material_task_id', '=', active_id), ('move_id.task_id', '=', active_id)]</field>
     </record>
-    <record id="view_stock_move_raw_tree" model="ir.ui.view">
-        <field name="name">stock.move.raw.tree</field>
+    <record id="view_stock_move_raw_list" model="ir.ui.view">
+        <field name="name">stock.move.raw.list</field>
         <field name="model">stock.move</field>
         <field name="priority">1000</field>
         <field name="arch" type="xml">
-            <tree
+            <list
                 editable="bottom"
                 default_order="sequence"
                 decoration-muted="state in ('done', 'cancel')"
-                decoration-warning="quantity_done - product_uom_qty &gt; 0.0001"
-                decoration-success="state not in ('done', 'cancel') and quantity_done - product_uom_qty &lt; 0.0001"
-                decoration-danger="state not in ('done', 'cancel') and reserved_availability &lt; product_uom_qty and product_uom_qty - reserved_availability &gt; 0.0001"
+                decoration-warning="quantity - product_uom_qty &gt; 0.0001"
+                decoration-success="state not in ('done', 'cancel') and quantity - product_uom_qty &lt; 0.0001"
             >
-                <field name="company_id" invisible="1" />
-                <field
-                    name="product_id"
-                    required="1"
-                    attrs="{'readonly': [('state', '!=', 'draft')]}"
-                />
-                <field name="sequence" invisible="1" />
+                <field name="company_id" column_invisible="1" />
+                <field name="product_id" required="1" readonly="state!='draft'" />
+                <field name="sequence" column_invisible="1" />
                 <field name="location_id" optional="hide" readonly="1" force_save="1" />
                 <field
                     name="location_dest_id"
@@ -42,34 +37,29 @@
                     readonly="1"
                     force_save="1"
                 />
-                <field name="name" invisible="1" />
-                <field name="state" invisible="1" />
+                <field name="name" column_invisible="1" />
+                <field name="state" column_invisible="1" />
                 <field
                     name="product_uom"
                     groups="uom.group_uom"
-                    attrs="{'readonly': [('state', '!=', 'draft')]}"
+                    readonly="state!='draft'"
                 />
                 <field
                     name="product_uom_qty"
                     string="To Consume"
-                    attrs="{'readonly': [('state', '!=', 'draft')]}"
+                    readonly="state!='draft'"
                 />
                 <button
                     name="action_task_product_forecast_report"
                     type="object"
                     icon="fa-area-chart"
                     title="Forecasted Report"
-                    attrs="{'invisible': ['|', ('product_id', '=', False),('state', 'in', ['done', 'cancel'])]}"
+                    invisible="not product_id or state in ['done', 'cancel']"
                 />
-                <field name="product_uom_category_id" invisible="1" />
-                <field
-                    name="reserved_availability"
-                    attrs="{'invisible': [('state', 'in', ('done', 'cancel'))]}"
-                    string="Reserved"
-                />
-                <field name="quantity_done" string="Consumed" readonly="1" />
-                <field name="group_id" invisible="1" />
-            </tree>
+                <field name="product_uom_category_id" column_invisible="1" />
+                <field name="quantity" string="Consumed" readonly="1" />
+                <field name="group_id" column_invisible="1" />
+            </list>
         </field>
     </record>
 </odoo>
