--- a/project_task_stock_product_set/views/project_task_view.xml
+++ b/project_task_stock_product_set/views/project_task_view.xml
@@ -3,7 +3,7 @@
     <record id="view_task_form2" model="ir.ui.view">
         <field name="name">project.task.form</field>
         <field name="model">project.task</field>
-        <field name="inherit_id" ref="project_stock.view_task_form2" />
+        <field name="inherit_id" ref="project_task_stock.view_task_form2" />
         <field name="arch" type="xml">
             <xpath expr="//header" position="inside">
                 <button
@@ -11,7 +11,7 @@
                     type="action"
                     name="%(act_open_wizard_product_set_add_from_task)d"
                     icon="fa-cubes"
-                    attrs="{'invisible': ['|', ('use_stock_moves','=',False), ('done_stock_moves', '=', True)]}"
+                    invisible="not use_stock_moves or done_stock_moves"
                     string="Add set"
                     groups="stock.group_stock_user"
                 />
