--- a/project_task_stock_product_set/wizard/project_task_stock_product_set_wizard_view.xml
+++ b/project_task_stock_product_set/wizard/project_task_stock_product_set_wizard_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <record id="product_set_add_from_task_form_view" model="ir.ui.view">
-        <field name="name">project.stock.product.set.form.view</field>
-        <field name="model">project.stock.product.set.wizard</field>
+        <field name="name">project.task.stock.product.set.form.view</field>
+        <field name="model">project.task.stock.product.set.wizard</field>
         <field name="arch" type="xml">
             <form>
                 <group name="main">
@@ -21,12 +21,12 @@
                         colspan="2"
                         domain="[('product_set_id', '=', product_set_id)]"
                     >
-                        <tree>
+                        <list>
                             <field
                                 name="product_id"
                                 options="{'no_open': True, 'no_create': True}"
                             />
-                        </tree>
+                        </list>
                     </field>
                 </group>
                 <footer>
@@ -46,7 +46,7 @@
         model="ir.actions.act_window"
     >
         <field name="name">Add a set in a project task</field>
-        <field name="res_model">project.stock.product.set.wizard</field>
+        <field name="res_model">project.task.stock.product.set.wizard</field>
         <field name="view_mode">form</field>
         <field name="view_id" ref="product_set_add_from_task_form_view" />
         <field name="domain">[]</field>
