--- a/project_task_code/views/project_view.xml
+++ b/project_task_code/views/project_view.xml
@@ -25,10 +25,17 @@
         <field name="name">project.task.code.kanban</field>
         <field name="model">project.task</field>
         <field name="inherit_id" ref="project.view_task_kanban" />
+        <field name="priority" eval="100" />
         <field name="arch" type="xml">
-            <field name="name" position="before">
-                <field name="code" />
-            </field>
+            <xpath expr="//field[@name='name']" position="before">
+                <div class="fw-bold fs-5" name="task_code">
+                    [<field name="code" class="oe_inline" />]
+                </div>
+            </xpath>
+            <!-- Move the name field inside the task_code div to ensure it appears after the code on a single line. -->
+            <xpath expr="//div[@name='task_code']" position="inside">
+                <xpath expr="//field[@name='name']" position="move" />
+            </xpath>
         </field>
     </record>
     <record id="project_task_code_search_view" model="ir.ui.view">
